--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <div class="w3-display-container">
           <img src="./images/profile1.jpeg" style="width:100%" alt="Frank">
           <div class="w3-display-bottomleft w3-container w3-text-black">
-            <h2>Frank Yin</h2>
+            <h2 style="color:White;">Frank Yin</h2>
           </div>
         </div>
         <div class="w3-container">
