--- a/index.html
+++ b/index.html
@@ -127,19 +127,19 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <div class="w3-container">
           <h5 class="w3-opacity"><b>MUMT 306 Term Project: Video Gestural Music Controller</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jun 2010 - Mar 2012</h6>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p><br>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>MUMT 307 Term Project: Digital Audio synthesis and processing using Matlab</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jun 2010 - Mar 2012</h6>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p><br>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>MUMT 501 Term Project: Constant Q transform</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jun 2010 - Mar 2012</h6>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p><br>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
           <hr>
         </div>
         <div class="w3-container">
