--- a/index.html
+++ b/index.html
@@ -114,31 +114,31 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-graduation-cap fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>School Projects</h2>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>MUMT 202 Term Project: New Media Production Using DAW software Reaper</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2015 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Dec 2018</h6>
           <p>Developed techniques in audio mixing.</p>
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>MUMT 302 Term Project: Generative Composition</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Mar 2012 - Dec 2014</h6>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Apr 2019</h6>
           <p>Consectetur adipisicing elit. Praesentium magnam consectetur vel in deserunt aspernatur est reprehenderit sunt hic. Nulla tempora soluta ea et odio, unde doloremque repellendus iure, iste.</p>
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>MUMT 306 Term Project: Video Gestural Music Controller</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jun 2010 - Mar 2012</h6>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Dec 2019</h6>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>MUMT 307 Term Project: Digital Audio synthesis and processing using Matlab</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jun 2010 - Mar 2012</h6>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Apr 2020</h6>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>MUMT 501 Term Project: Constant Q transform</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jun 2010 - Mar 2012</h6>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Apr 2020</h6>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
           <hr>
         </div>
