--- a/index.html
+++ b/index.html
@@ -115,31 +115,37 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <div class="w3-container">
           <h5 class="w3-opacity"><b>MUMT 202 Term Project: New Media Production Using DAW software Reaper</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Dec 2018</h6>
-          <p>Developed techniques in audio mixing.</p>
+          <li>Developed techniques in audio mixing.</li>
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>MUMT 302 Term Project: Generative Composition</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Apr 2019</h6>
-          <p>Consectetur adipisicing elit. Praesentium magnam consectetur vel in deserunt aspernatur est reprehenderit sunt hic. Nulla tempora soluta ea et odio, unde doloremque repellendus iure, iste.</p>
+          <li>Enhanced programming skills in visual programming language Max/MSP.</li>
+          <li>Enhanced algorithmic problem solving skill in visual programming.</li>
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>MUMT 306 Term Project: Video Gestural Music Controller</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Dec 2019</h6>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+          <li>Developed techniques in image and video processing using Jitter objects in Max/MSP.</li>
+          <li>Developed gestural control and HCI techniques.</li>
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>MUMT 307 Term Project: Digital Audio synthesis and processing using Matlab</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Apr 2020</h6>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+          <li>Enhanced programming skills in Matlab with a focus on audio synthesis and processing.</li>
+          <li>Enhanced techniques designing digital filters.</li>
+          <li>Used some synthesis techniques such as modal synthesis and frequency modulation synthesis.</li>
+          <li>Used some audio processing techniques such as choral and reverb effects.</li>
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>MUMT 501 Term Project: Constant Q transform</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Apr 2020</h6>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+          <li>Practiced techniques in literature review.</li>
+          <li>Enhanced techniques in signal spectrum analysis.</li>
           <hr>
         </div>
         <div class="w3-container">
