--- a/index.html
+++ b/index.html
@@ -155,6 +155,12 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         </div>
       </div>
 
+	    <div class="w3-container">
+          <h5 class="w3-opacity"><b>other stuff</b></h5>
+          <p> <a href="html/toolbox/txtEditor/index.html"> Editor</a> <br></p>
+          <hr>
+        </div>
+      </div>
     <!-- End Right Column -->
     </div>
     
